[gd_scene load_steps=12 format=3 uid="uid://b08go61uto70v"]

[ext_resource type="Texture2D" uid="uid://uohqpg7iaeod" path="res://Assets/Sprites/Environment/world_tileset.png" id="1_7qfdj"]
[ext_resource type="Script" path="res://Scripts/luck_block.gd" id="1_m68j8"]
[ext_resource type="AudioStream" uid="uid://dnui26mn6mwq1" path="res://Assets/Sounds/coin.wav" id="3_1de1b"]
[ext_resource type="AudioStream" uid="uid://cbshlix3wm0sw" path="res://Assets/Sounds/bump.wav" id="4_00ear"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i4dw"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0i1c"]
atlas = ExtResource("1_7qfdj")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbilw"]
atlas = ExtResource("1_7qfdj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q460f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0i1c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbilw")
}],
"loop": true,
"name": &"done",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_xxd0b"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1.68179, 0.482968, 0.138696),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_sgjbp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1vnk"]
_data = {
"Hit": SubResource("Animation_xxd0b"),
"RESET": SubResource("Animation_sgjbp")
}

[node name="LuckBlock" type="StaticBody2D"]
script = ExtResource("1_m68j8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6i4dw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q460f")
autoplay = "default"

[node name="PowerUpOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1de1b")
volume_db = 1.0
bus = &"SoundEffects"

[node name="Bump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_00ear")
volume_db = 1.0
bus = &"SoundEffects"

[node name="JumpAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i1vnk")
}
